Hid scrollbar and fixed MatPlotLib bug

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,3 +10,12 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.dotted-divider-large {
+  border: none;
+  height: 2px;
+  background-image: radial-gradient(circle, #9ca3af 1.5px, transparent 1.5px);
+  background-size: 8px 8px; /* Controls spacing */
+  background-position: 0 0;
+  background-repeat: repeat-x;
+}
